fleet-gitops/20-monitoring/ingress-auth/manifests/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: alertmanager
      namespace: monitoring
      sectionName: https
  hostnames:
    - "alertmanager.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy-alertmanager
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-alertmanager
      backendRefs:
        - name: alertmanager
          port: 9093
